Read control from json file

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /Sources/EventManager/Debug
 /Sources/Graphics/Debug
 /Sources/Shared/Debug
-/Sources/GUI/Debug/
+/Sources/GUI/Debug
 /Sources/Client/x64/Debug
 /Sources/EventManager/x64/Debug
 /Sources/Graphics/x64/Debug
