--- a/Sources/GUI/GUI.vcxproj.filters
+++ b/Sources/GUI/GUI.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="ControlFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Button.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI.h">
@@ -78,6 +81,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="BaseControl.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ControlTypes.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
