--- a/Sources/EventManager/EventManager.vcxproj.filters
+++ b/Sources/EventManager/EventManager.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="EventQuit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EventButtonClick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IEventObserver.h">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="EventQuit.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EventButtonClick.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
