Update imgui lib

--- a/Libs/imgui/imgui.vcxproj.filters
+++ b/Libs/imgui/imgui.vcxproj.filters
@@ -15,40 +15,55 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
+    <ClInclude Include="imconfig.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI.cpp">
+    </ClInclude>
+    <ClInclude Include="imgui.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GUISettings.cpp">
+    </ClInclude>
+    <ClInclude Include="imgui_impl_sdl.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ControlFactory.cpp">
+    </ClInclude>
+    <ClInclude Include="imgui_internal.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Button.cpp">
+    </ClInclude>
+    <ClInclude Include="imstb_rectpack.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
+    </ClInclude>
+    <ClInclude Include="imstb_textedit.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imstb_truetype.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui_freetype.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui_impl_opengl2.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GUI.h">
+    <ClCompile Include="imgui.cpp">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GUISettings.h">
+    </ClCompile>
+    <ClCompile Include="imgui_demo.cpp">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ControlFactory.h">
+    </ClCompile>
+    <ClCompile Include="imgui_draw.cpp">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BaseControl.h">
+    </ClCompile>
+    <ClCompile Include="imgui_impl_sdl.cpp">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Button.h">
+    </ClCompile>
+    <ClCompile Include="imgui_widgets.cpp">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ControlTypes.h">
+    </ClCompile>
+    <ClCompile Include="imgui_freetype.cpp">
       <Filter>Source Files</Filter>
-    </ClInclude>
+    </ClCompile>
+    <ClCompile Include="imgui_impl_opengl2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
