--- a/Sources/EventManager/EventManager.vcxproj.filters
+++ b/Sources/EventManager/EventManager.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="EventButtonClick.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EventWindowResize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IEventObserver.h">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="EventButtonClick.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EventWindowResize.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
