--- a/Sources/GUI/GUI.vcxproj.filters
+++ b/Sources/GUI/GUI.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="BaseControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AlignHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Instance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI.h">
@@ -57,6 +63,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="AlignType.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AlignHelper.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Instance.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
