--- a/Sources/GUI/GUI.vcxproj.filters
+++ b/Sources/GUI/GUI.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="Instance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ControlTypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI.h">
@@ -69,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Instance.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Panel.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
