--- a/Sources/GUI/GUI.vcxproj
+++ b/Sources/GUI/GUI.vcxproj
@@ -105,10 +105,12 @@
     <ClCompile Include="BaseControl.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="ControlFactory.cpp" />
+    <ClCompile Include="ControlTypes.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="GUISettings.cpp" />
     <ClCompile Include="Instance.cpp" />
+    <ClCompile Include="Panel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AlignHelper.h" />
@@ -120,6 +122,7 @@
     <ClInclude Include="GUISettings.h" />
     <ClInclude Include="BaseControl.h" />
     <ClInclude Include="Instance.h" />
+    <ClInclude Include="Panel.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libs\freetype\builds\windows\vc2010\freetype.vcxproj">
