--- a/Sources/GUI/GUI.vcxproj.filters
+++ b/Sources/GUI/GUI.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="ControlTypes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FontManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GUI.h">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Panel.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FontManager.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
