--- a/Sources/Shared/Shared.vcxproj.filters
+++ b/Sources/Shared/Shared.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="JsonCast.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="OS.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SettingsManager.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="JsonCast.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
