--- a/Sources/EventManager/EventManager.vcxproj
+++ b/Sources/EventManager/EventManager.vcxproj
@@ -104,15 +104,19 @@
     <ClCompile Include="EventButtonClick.cpp" />
     <ClCompile Include="EventFactory.cpp" />
     <ClCompile Include="EventManager.cpp" />
+    <ClCompile Include="EventMouseUp.cpp" />
     <ClCompile Include="EventQuit.cpp" />
+    <ClCompile Include="EventUnknown.cpp" />
     <ClCompile Include="EventWindowResize.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EventButtonClick.h" />
     <ClInclude Include="EventFactory.h" />
     <ClInclude Include="EventManager.h" />
+    <ClInclude Include="EventMouseUp.h" />
     <ClInclude Include="EventQuit.h" />
     <ClInclude Include="EventType.h" />
+    <ClInclude Include="EventUnknown.h" />
     <ClInclude Include="EventWindowResize.h" />
     <ClInclude Include="IEvent.h" />
     <ClInclude Include="IEventObserver.h" />
