--- a/Sources/Graphics/Graphics.vcxproj.filters
+++ b/Sources/Graphics/Graphics.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="GraphicsSettings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsSettings.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
