--- a/Sources/Client/Client.vcxproj.filters
+++ b/Sources/Client/Client.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="ErrorWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShapeConstructor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -36,6 +39,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="ErrorWindow.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameState.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShapeConstructor.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
