--- a/Sources/EventManager/EventManager.vcxproj.filters
+++ b/Sources/EventManager/EventManager.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="EventWindowResize.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EventUnknown.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EventMouseUp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IEventObserver.h">
@@ -57,6 +63,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="EventWindowResize.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EventUnknown.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EventMouseUp.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
