--- a/Sources/Shared/Shared.vcxproj
+++ b/Sources/Shared/Shared.vcxproj
@@ -14,6 +14,7 @@
     <ClInclude Include="IniFile.h" />
     <ClInclude Include="JsonCast.h" />
     <ClInclude Include="OS.h" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="SettingsManager.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
