--- a/Sources/Shared/Shared.vcxproj.filters
+++ b/Sources/Shared/Shared.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="OS.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Point.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SettingsManager.cpp">
