--- a/Resources/settings.ini
+++ b/Resources/settings.ini
@@ -1,6 +1,5 @@
 [GUI]
-MainMenuFile=MainMenu.json
-CreateMechanizmFile=CreateMechanizm.json
+MainFile=GUI/MainMenu.json
 [Grid]
 Visible=True
 Size=10.0f
