--- a/Sources/Graphics/Graphics.vcxproj.filters
+++ b/Sources/Graphics/Graphics.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Camera.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Color4f.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
