--- a/Sources/EventManager/EventManager.vcxproj.filters
+++ b/Sources/EventManager/EventManager.vcxproj.filters
@@ -21,33 +21,9 @@
     <ClCompile Include="EventManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EventQuit.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EventWindowResize.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EventUnknown.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EventMouseUp.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EventMouseDown.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EventMouseMove.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IEventObserver.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="IEvent.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="EventType.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="EventManager.h">
@@ -59,9 +35,6 @@
     <ClInclude Include="EventWindowResize.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="EventUnknown.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="EventMouseUp.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -69,6 +42,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="EventMouseMove.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseEvent.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EventTypes.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
