--- a/Sources/GUI/GUI.vcxproj
+++ b/Sources/GUI/GUI.vcxproj
@@ -107,10 +107,10 @@
     <ClCompile Include="ControlFactory.cpp" />
     <ClCompile Include="ControlTypes.cpp" />
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="EventButtonClick.cpp" />
     <ClCompile Include="FontManager.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="GUISettings.cpp" />
+    <ClCompile Include="Header.cpp" />
     <ClCompile Include="Instance.cpp" />
     <ClCompile Include="Panel.cpp" />
   </ItemGroup>
@@ -125,6 +125,7 @@
     <ClInclude Include="GUI.h" />
     <ClInclude Include="GUISettings.h" />
     <ClInclude Include="BaseControl.h" />
+    <ClInclude Include="Header.h" />
     <ClInclude Include="Instance.h" />
     <ClInclude Include="Panel.h" />
   </ItemGroup>
