--- a/Resources/settings.ini
+++ b/Resources/settings.ini
@@ -13,17 +13,17 @@ Disable_GL_POLYGON_SMOOTH=False
 Enable_GL_BLEND=True
 Enable_GL_LINE_SMOOTH=True
 Enable_GL_TEXTURE_2D=True
-Hint_GL_LINE_SMOOTH_HINT=4353‬
-Hint_GL_POINT_SMOOTH_HINT=4353‬
+Hint_GL_LINE_SMOOTH_HINT=4353
+Hint_GL_POINT_SMOOTH_HINT=4353
 SetAttribute_ACCELERATED_VISUAL=1
 SetAttribute_CONTEXT_MAJOR_VERSION=2
+SetAttribute_CONTEXT_MINOR_VERSION=2
 SetAttribute_DEPTH_SIZE=0
 SetAttribute_DOUBLEBUFFER=1
 SetAttribute_STENCIL_SIZE=0
-SetAttribute_CONTEXT_MINOR_VERSION=2
-ClearColor=0.014,0.227,0.361
+ClearColor=0.008,0.435,0.729
 [Window]
-TitleText=PhyGame
+TitleText=
 Width=1024
 Height=768
 IsFullscreen=False
